WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291861
REGRESSION(
286329@main
?): [ macOS wk2 Release x86_64 ] media/media-vp8-hiddenframes.html is a flaky failure.
https://bugs.webkit.org/show_bug.cgi?id=291861
Summary
REGRESSION(286329@main?): [ macOS wk2 Release x86_64 ] media/media-vp8-hidden...
Yasmin Karimi
Reported
2025-04-21 14:54:41 PDT
Created
attachment 474996
[details]
media/media-vp8-hiddenframes.webarchive media/media-vp8-hiddenframes.html This test is a flaky image failure on macOS wk2 Release x86_64. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-vp8-hiddenframes.html
IMAGE DIFF: Attached DIFF URL:
https://build.webkit.org/results/Apple-Sequoia-Release-WK2-Tests/293911@main%20(2349)/media/media-vp8-hiddenframes-diffs.html
REPRODUCIBILITY: I was unable to reproduce on MacOS Sequoia 15.3.1 (24D70 / x86_64). REGRESSION: According to the results dashboard and contextual information, the probable regression point is
286329@main
. The code paths changed in this commit appear to be directly related to the observed regression test failures.
Attachments
media/media-vp8-hiddenframes.webarchive
(92.18 KB, application/x-webarchive)
2025-04-21 14:54 PDT
,
Yasmin Karimi
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-21 14:54:59 PDT
<
rdar://problem/149714451
>
EWS
Comment 2
2025-04-21 15:09:18 PDT
Test gardening commit
293937@main
(0eedab5fa949): <
https://commits.webkit.org/293937@main
> Reviewed commits have been landed. Closing PR #44344 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2025-05-04 22:10:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44921
EWS
Comment 4
2025-05-05 15:17:30 PDT
Committed
294530@main
(9e2d49b25af8): <
https://commits.webkit.org/294530@main
> Reviewed commits have been landed. Closing PR #44921 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug