REGRESSION(286329@main?): [ macOS wk2 Release x86_64 ] media/media-vp8-hiddenframes.html is a flaky failure. https://bugs.webkit.org/show_bug.cgi?id=291861 rdar://149714451

Reviewed by Jer Noble.

A fix was added in 288962@main to allow seeking to the end of the file.
The fix wasn't applied for the WebM player. We now allow seeking to the end
of the video if all content has been downloaded.

Updated test.
* LayoutTests/media/media-vp8-hiddenframes.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::reenqueueMediaForTime):

Canonical link: https://commits.webkit.org/294530@main